--- a/src/main/resources/templates/appointments/delete-appointment.html
+++ b/src/main/resources/templates/appointments/delete-appointment.html
@@ -4,10 +4,12 @@
 <body class="container">
 <div th:replace="fragments :: topBanner"></div>
 <nav th:replace="fragments :: navigation"></nav>
-<div class="container-fluid">
+
     <div class="row">
         <div th:replace="fragments :: leftBanner"></div>
         <div class="col">
+            <div class="row align-items-start">
+                <div style="background-color:white;">
             <form method="post">
                 <th:block th:each="appointment :${appointments}">
                     <div class="form-group">
@@ -18,11 +20,13 @@
                     </div>
                 </th:block>
                 <br></br>
+                </div>
                 <input type="submit" value="Delete" class="btn btn-danger">
             </form>
         </div>
+                </div>
         <div th:replace="fragments :: rightBanner"></div>
     </div>
-</div>
+
 </body>
 </html>
