--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -1,59 +1,42 @@
-body {
-    margin: 0;
-    width: 100vw;
-    height: 100vh;
-    background-color: #C0C0C0;
+body{
+    margin: auto;
+    background-color: black;
+    width: 100%;
+    height: 100%;
+    background-image: url("/images/bgTest.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
-div {
-    width: 100vw;
-    height: 100vh;
+div.banner{
+opacity: 0.8;
 }
 
-h1 {
-centered;}
-
-td, th {
-    padding: 5px;
-
+div.panels{
+opacity: 0.5;
 }
 
-th {
-    text-align: center;
-    vertical-align top;
+p{
+color:white;
+font-size:large;
+font-weight: bold;
 }
 
-td {
-    vertical-align: top;
-}
+tr{
+  color:white;
+  font-size:large;
+  font-weight: bold;
+  }
 
-tr:nth-child(odd) {
-    background-color: #e4e4e4;
-}
-
-table.center {
-    margin-left: auto;
-    margin-right: auto;
-}
-
-table.job-listing {
-    margin: 30px auto;
-    border: 1px solid #e4e4e4;
-    width: 80%;
-}
-
-table.job-listing td:first-child {
+td{
+    color:white;
+    font-size:large;
     font-weight: bold;
-}
+    }
 
-table.job-listing td:last-child {
-    width: 80%;
-}
-
-label {
-    margin-right: 15px;
-}
-
-.centered {
-    text-align: center;
+h1{
+color:white;
+font-weight: bold;
+outline-color: black;
 }
