--- a/src/main/resources/templates/appointments/clients.html
+++ b/src/main/resources/templates/appointments/clients.html
@@ -2,7 +2,6 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
 <body class="container">
-
 <div th:replace="fragments :: topBanner"></div>
 
 <h1>Clients</h1>
@@ -13,7 +12,7 @@
     <div th:replace="fragments :: leftBanner"></div>
 
     <div class="col">
-        <table class="table table-striped">
+        <table class="table table-dark">
             <thead>
             <tr>
                 <th>ID</th>
