--- a/src/main/resources/templates/appointments/create.html
+++ b/src/main/resources/templates/appointments/create.html
@@ -6,11 +6,13 @@
 
 <nav th:replace="fragments :: navigation"></nav>
 
-<div class="container-fluid">
+
     <div class="row">
         <div th:replace="fragments :: leftBanner"></div>
 
         <div class="col">
+            <div class="row align-items-start">
+                <div style="background-color:white;">
             <form method="post" action="/appointments/create">
 
                 <div class="form-group">
@@ -42,8 +44,6 @@
                         </select>
                     </lebel>
                 </div>
-
-
                 <div class="form-group">
                     <lebel>Type
                         <select class="form-select form-select-lg" th:name="type">
@@ -64,14 +64,15 @@
                         </select>
                     </lebel>
                 </div>
-
-
                 <div class="form-group">
                     <input class="btn btn-success" type="submit" value="Create Appointment">
                 </div>
             </form>
         </div>
+            </div>
+        </div>
         <div th:replace="fragments :: rightBanner"></div>
-    </div>
+
+        </div>
 </body>
 </html>
