--- a/src/main/resources/templates/appointments/index.html
+++ b/src/main/resources/templates/appointments/index.html
@@ -6,11 +6,10 @@
 <h1>Appointments</h1>
 <nav th:replace="fragments :: navigation"></nav>
 
-<div class="container-fluid">
     <div class="row">
         <div th:replace="fragments :: leftBanner"></div>
         <div class="col">
-<table class ="table table-striped">
+<table class ="table table-dark">
     <thead>
     <tr>
         <th>ID</th>
@@ -45,7 +44,6 @@
         <div th:replace="fragments :: rightBanner"></div>
 
     </div>
-</div>
 
 </body>
 </html>
