--- a/src/main/resources/templates/appointments/trainers.html
+++ b/src/main/resources/templates/appointments/trainers.html
@@ -7,13 +7,13 @@
 <h1>Trainers</h1>
 <nav th:replace="fragments :: navigation"></nav>
 
-<div class="container-fluid">
+
     <div class="row">
         <div th:replace="fragments :: leftBanner"></div>
 
         <div class="col">
 
-<table class ="table table-striped">
+<table class ="table table-dark">
     <thead>
     <tr>
         <th>ID</th>
@@ -40,7 +40,7 @@
         <div th:replace="fragments :: rightBanner"></div>
 
     </div>
-</div>
+
 
 
 </body>
