--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,29 +2,26 @@
 <html xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head> <!--Replaces using th:replace="(file_name) :: (name in file)-->
 
-<body class="body">
+<body class="container">
 <div th:replace="fragments :: topBanner"></div>
-
+<h1>Home</h1>
 <nav th:replace="fragments :: navigation"></nav>
 
-<div class="container-fluid">
+
     <div class="row">
         <div th:replace="fragments :: leftBanner"></div>
 
         <div class="col">
             <table class="flex-fill">
                 <tr>
-                    <td><a href="/appointments"><img th:src="@{/images/appointments.png}"/></a></td>
                     <td><a href="/clients"><img th:src="@{/images/clients.png}"/></a></td>
                     <td><a href="/trainers"><img th:src="@{/images/trainers.png}"/></a></td>
+                    <td><a href="/appointments"><img th:src="@{/images/appointments.png}"/></a></td>
                 </tr>
             </table>
         </div>
-
         <div th:replace="fragments :: rightBanner"></div>
-
     </div>
-</div>
 
 </body>
 </html>
