--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -1,5 +1,42 @@
 body{
-font-size:18px;
-color:red;
+    margin: auto;
+    background-color: black;
+    width: 100%;
+    height: 100%;
+    background-image: url("/images/bgTest.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
+div.banner{
+opacity: 0.8;
+}
+
+div.panels{
+opacity: 0.5;
+}
+
+p{
+color:white;
+font-size:large;
+font-weight: bold;
+}
+
+tr{
+  color:white;
+  font-size:large;
+  font-weight: bold;
+  }
+
+td{
+    color:white;
+    font-size:large;
+    font-weight: bold;
+    }
+
+h1{
+color:white;
+font-weight: bold;
+outline-color: black;
+}
