--- a/src/main/resources/templates/appointments/add-trainer.html
+++ b/src/main/resources/templates/appointments/add-trainer.html
@@ -1,32 +1,51 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="https://www.thymeleaf.org/">
-<head th:replace = "fragments :: head"></head>
-<body class = "container">
-<nav th:replace = "fragments :: navigation"></nav>
-<form method="post" action ="/trainers/add-trainer">
-    <div class ="form-group">
-    <label for="firstName">First Name</label>
-    <input class="form-control" id = "firstName" th:field="${trainer.fName}"  >
-        <p class ="error" style ="color:red;" th:errors ="${trainer.fName}"></p>
+<html lang="en" xmlns:th="http://www.thymeleaf.org/">
+<head th:replace="fragments :: head"></head>
+<body class="container">
+<div th:replace="fragments :: topBanner"></div>
+<nav th:replace="fragments :: navigation"></nav>
+
+<div class="container-fluid">
+    <div class="row">
+        <div th:replace="fragments :: leftBanner"></div>
+
+        <div class="col">
+            <div class="row align-items-start">
+                <div style="background-color:white;">
+            <form method="post" action="/trainers/add-trainer">
+                <div class="form-group">
+                    <label for="firstName">First Name</label>
+                    <p style="color:gray; font-size:smaller">(3-30 characters)</p>
+                    <input class="form-control" id="firstName" th:field="${trainer.fName}">
+                    <p class="error" style="color:red;" th:errors="${trainer.fName}"></p>
+                </div>
+                <div class="form-group">
+                    <label for="lastName">Last Name</label>
+                    <p style="color:gray; font-size:smaller">(3-30 characters)</p>
+                    <input class="form-control" id="lastName" th:field="${trainer.lName}">
+                    <p class="error" style="color:red;" th:errors="${trainer.lName}"></p>
+                </div>
+                <div class="form-group">
+                    <label for="phone">Phone</label>
+                    <p style="color:gray; font-size:smaller"> (xxx-xxx-xxxx)</p>
+                    <input class="form-control" id="phone" th:field="${trainer.phone}">
+                    <p class="error" style="color:red;" th:errors="${trainer.phone}"></p>
+                </div>
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input class="form-control" id="email" th:field="${trainer.email}">
+                    <p class="error" style="color:red;" th:errors="${trainer.email}"></p>
+                </div>
+                <div class="form-group">
+                    <input class="btn btn-success" type="submit" value="Add Trainer">
+                </div>
+            </form>
+        </div>
+            </div>
+        </div>
+        <div th:replace="fragments :: rightBanner"></div>
+
     </div>
-    <div class ="form-group">
-    <label for="lastName">Last Name</label>
-    <input class="form-control" id = "lastName" th:field="${trainer.lName}">
-        <p class ="error" style ="color:red;" th:errors ="${trainer.lName}"></p>
-    </div>
-    <div class ="form-group">
-    <label for="phone">Phone</label>
-    <input class="form-control"  id="phone" th:field="${trainer.phone}" >
-        <p class ="error" style ="color:red;" th:errors ="${trainer.phone}"></p>
-    </div>
-    <div class ="form-group">
-        <label for="email">Email</label>
-        <input class="form-control"  id="email" th:field="${trainer.email}" >
-        <p class ="error" style ="color:red;" th:errors ="${trainer.email}"></p>
-    </div>
-    <div class ="form-group">
-    <input class="btn btn-success" type="submit" value="Add Trainer">
-    </div>
-</form>
+</div>
 </body>
 </html>
