--- a/src/main/resources/templates/appointments/delete-appointment.html
+++ b/src/main/resources/templates/appointments/delete-appointment.html
@@ -1,20 +1,32 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org/">
-<head th:replace = "fragments :: head"></head>
-<body class = "container">
-<form method="post">
+<head th:replace="fragments :: head"></head>
+<body class="container">
+<div th:replace="fragments :: topBanner"></div>
+<nav th:replace="fragments :: navigation"></nav>
 
-    <th:block th:each="appointment :${appointments}">
-        <div class ="form-group">
-            <label>
-                <span th:text ="${appointment.id}"></span>
-                <input type="checkbox" name ="appointmentIds" th:value="${appointment.id}" class ="form-control">
-            </label>
-
+    <div class="row">
+        <div th:replace="fragments :: leftBanner"></div>
+        <div class="col">
+            <div class="row align-items-start">
+                <div style="background-color:white;">
+            <form method="post">
+                <th:block th:each="appointment :${appointments}">
+                    <div class="form-group">
+                        <label>
+                            <span th:text="${appointment.id}"></span>
+                            <input type="checkbox" name="appointmentIds" th:value="${appointment.id}">
+                        </label>
+                    </div>
+                </th:block>
+                <br></br>
+                </div>
+                <input type="submit" value="Delete" class="btn btn-danger">
+            </form>
         </div>
-    </th:block>
+                </div>
+        <div th:replace="fragments :: rightBanner"></div>
+    </div>
 
-    <input type="submit" value="Delete" class = "btn btn-danger">
-</form>
 </body>
 </html>
