--- a/src/main/resources/templates/appointments/delete-client.html
+++ b/src/main/resources/templates/appointments/delete-client.html
@@ -1,20 +1,36 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org/">
-<head th:replace = "fragments :: head"></head>
-<body class = "container">
-<form method="post">
+<head th:replace="fragments :: head"></head>
+<body class="container">
 
-        <th:block th:each="client :${clients}">
-            <div class ="form-group">
-            <label>
-                <span th:text ="${client.fName} + ' '+ ${client.lName}"></span>
-                <input type="checkbox" name ="clientIds" th:value="${client.id}" class ="form-control">
-            </label>
+<div th:replace="fragments :: topBanner"></div>
+<nav th:replace="fragments :: navigation"></nav>
 
+
+    <div class="row">
+        <div th:replace="fragments :: leftBanner"></div>
+
+        <div class="col">
+            <div class="row align-items-start">
+                <div style="background-color:white;">
+            <form method="post">
+                <th:block th:each="client :${clients}">
+                    <div class="form-group">
+                        <label>
+                            <span th:text="${client.fName} + ' '+ ${client.lName}"></span>
+                            <input type="radio" name="clientIds" th:value="${client.id}">
+                        </label>
+                    </div>
+                    <br></br>
+                </th:block>
+                </div>
+                <input type="submit" value="Delete" class="btn btn-danger">
+            </form>
+
+                </div>
             </div>
-        </th:block>
+        <div th:replace="fragments :: rightBanner"></div>
+    </div>
 
- <input type="submit" value="Delete" class = "btn btn-danger">
-</form>
 </body>
 </html>
