all tables estableshed

--- a/src/main/resources/templates/appointments/index.html
+++ b/src/main/resources/templates/appointments/index.html
@@ -20,12 +20,13 @@
     <tr th:each="appointment : ${appointments}">
         <td th:text="${appointment.id}"></td>
 
-        <td th:text="${appointment.client.fName} + ' ' + ${appointment.client.lName.charAt(0)}+'.'"></td>
+
         <td th:text="${appointment.trainer.fName}+' '+ ${appointment.trainer.lName.charAt(0)+'.'}"></td>
+        <td th:text="${appointment.client.fName} + ' ' + ${appointment.client.lName.charAt(0)}+'.'"></td>
 
         <td th:text="${appointment.type.displayName}"></td>
         <td th:text="${appointment.level.displayName}"></td>
-        <td th:text="${appointment.date}"></td>
+        <td th:text="${#dates.format(appointment.date, 'dd-MMM-yyyy')}"></td>
         <td th:text="${appointment.time}"></td>
 
     </tr>
