--- a/src/main/resources/templates/appointments/create.html
+++ b/src/main/resources/templates/appointments/create.html
@@ -3,9 +3,39 @@
 <head th:replace="fragments :: head"></head>
 <body class="container">
 <div th:replace="fragments :: topBanner"></div>
-
 <nav th:replace="fragments :: navigation"></nav>
 
+
+    <div class ="form-group">
+    <label for="date">Date</label>
+    <input class="form-control" type="date" id="date" name="date">
+    </div>
+    <div class ="form-group">
+    <label for="time">Time</label>
+    <input class="form-control" type="time" id="time" name="time">
+    </div>
+
+
+    <div class = "form-group">
+        <lebel>Trainer
+            <select class="form-select form-select-lg" th:name = "trainer">
+                <option th:each = "trainer : ${trainers}"
+                        th:value = "${trainer.id}"
+                        th:text = "${trainer.fName} + ' ' + ${trainer.lName}  ">
+                </option>
+            </select>
+        </lebel>
+    </div>
+    <div class = "form-group">
+        <lebel>Client
+            <select class="form-select form-select-lg" th:name = "client" >
+                <option th:each = "client : ${clients}"
+                        th:value = "${client.id}"
+                        th:text = "${client.fName} + ' ' + ${client.lName} ">
+                </option>
+            </select>
+        </lebel>
+    </div>
 
     <div class="row">
         <div th:replace="fragments :: leftBanner"></div>
