--- a/src/main/resources/templates/appointments/add-client.html
+++ b/src/main/resources/templates/appointments/add-client.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org/">
+<html lang="en" xmlns:th="https://www.thymeleaf.org/">
 <head th:replace = "fragments :: head"></head>
 <body class = "container">
 <nav th:replace = "fragments :: navigation"></nav>
@@ -36,61 +36,7 @@
     </div>
     <div class ="form-group">
         <input class="btn btn-success" type="submit" value="Add Client">
-<div th:replace = "fragments :: topBanner"></div>
-
-<h1> Add Clients</h1>
-<nav th:replace="fragments :: navigation"></nav>
-
-<div class="row">
-    <div th:replace="fragments :: leftBanner"></div>
-
-    <div class="col">
-        <div class="row align-items-start">
-        <div style="background-color:white;">
-        <form method="post" action="/clients/add-client">
-            <div class="form-group">
-                <label for="fName">First Name </label>
-                <p style="color:gray; font-size:smaller">(3-30 characters)</p>
-                <input class="form-control" id="fName" th:field="${client.fName}">
-                <p class="error" style="color:red;" th:errors="${client.fName}"></p>
-            </div>
-            <div class="form-group">
-                <label for="lastName">Last Name</label>
-                <p style="color:gray; font-size:smaller"> (3-30 characters)</p>
-                <input class="form-control" id="lastName" th:field="${client.lName}">
-                <p class="error" style="color:red;" th:errors="${client.lName}"></p>
-            </div>
-            <div class="form-group">
-                <label for="dob">Date Of Birth</label>
-                <p style="color:gray; font-size:smaller"> (xx/xx/xxxx)</p>
-                <input class="form-control" id="dob" th:field="${client.dob}">
-                <p class="error" style="color:red;" th:errors="${client.dob}"></p>
-            </div>
-            <div class="form-group">
-                <label for="phone">Phone Number</label>
-                <p style="color:gray; font-size:smaller"> (xxx-xxx-xxxx)</p>
-                <input class="form-control" id="phone" th:field="${client.phone}">
-                <p class="error" style="color:red;" th:errors="${client.phone}"></p>
-            </div>
-            <div class="form-group">
-                <label for="email">Email</label>
-                <input class="form-control" id="email" th:field="${client.email}">
-                <p class="error" style="color:red;" th:errors="${client.email}"></p>
-            </div>
-            <div class="form-group">
-                <label for="note">Note</label>
-                <textarea class="form-control" id="note" th:field="${client.note}" rows="4" cols="50"></textarea>
-            </div>
-            <div class="form-group">
-                <input class="btn btn-success" type="submit" value="Add Client">
-            </div>
-
-        </form>
     </div>
-            </div>
-        </div>
-        <div th:replace="fragments :: rightBanner"></div>
-    </div>
-
+</form>
 </body>
 </html>
