--- a/src/main/resources/templates/appointments/clients.html
+++ b/src/main/resources/templates/appointments/clients.html
@@ -6,42 +6,35 @@
 
 <h1>Clients</h1>
 
-<nav th:replace="fragments :: navigation"></nav>
+<nav th:replace = "fragments :: navigation"></nav>
 
-<div class="row">
-    <div th:replace="fragments :: leftBanner"></div>
+<table class ="table table-striped">
+    <thead>
+    <tr>
+        <th>ID</th>
+        <th>Name</th>
+        <th>DOB</th>
+        <th>Phone</th>
+        <th>Email</th>
+        <th>Note</th>
+    </tr>
+    </thead>
+    <tr th:each="client : ${clients}">
+        <td th:text="${client.id}"  ></td>
+        <td><a th:text="${client.fName + ' ' + client.lName}" th:href ="'/appointments?clientId=' + ${client.id}" ></a></td>
+        <td th:text="${#dates.format(client.date, 'dd-MMM-yyyy')}"></td>
+        <td th:text="${client.phone}"></td>
+        <td th:text="${client.email}"></td>
+        <td th:text="${client.note}"></td>
+    </tr>
+</table>
+<p th:unless="${clients} and ${clients.size()}">No Clients!</p>
 
-    <div class="col">
-        <table class="table table-dark">
-            <thead>
-            <tr>
-                <th>ID</th>
-                <th>Name</th>
-                <th>DOB</th>
-                <th>Phone</th>
-                <th>Email</th>
-                <th>Note</th>
-            </tr>
-            </thead>
-            <tr th:each="client : ${clients}">
-                <td th:text="${client.id}"></td>
-                <td th:text="${client.fName + ' ' + client.lName}"></td>
-                <td th:text="${client.dob}"></td>
-                <td th:text="${client.phone}"></td>
-                <td th:text="${client.email}"></td>
-                <td th:text="${client.note}"></td>
-            </tr>
-        </table>
-        <p th:unless="${clients} and ${clients.size()}">No Clients!</p>
+<ul class="list-group">
+    <li class="list-group-item"><a href="/clients/add-client">Add Client</a></li>
+    <li class="list-group-item"><a href="/clients/delete-client">Delete Client</a></li>
+</ul>
 
-        <ul class="list-group">
-            <li class="list-group-item"><a href="/clients/add-client">Add Client</a></li>
-            <li class="list-group-item"><a href="/clients/delete-client">Delete Client</a></li>
-        </ul>
-    </div>
-
-    <div th:replace="fragments :: rightBanner"></div>
-</div>
 
 
 </body>
