all pages linked with same layout, delete pages formatting is fixed. need to look in to regex and replace home page image link layouts

--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -8,6 +8,13 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
 }
+.col{
+width: 50%
+}
+
+.col.panels{
+width: 25%
+}
 
 div.banner{
 opacity: 0.8;
