--- a/src/main/resources/templates/appointments/add-client.html
+++ b/src/main/resources/templates/appointments/add-client.html
@@ -3,6 +3,8 @@
 <head th:replace = "fragments :: head"></head>
 <body class = "container">
 <nav th:replace = "fragments :: navigation"></nav>
+<div class="row align-items-start">
+    <div style="background-color:white;">
 <form method="post" action ="/clients/add-client">
     <div class ="form-group">
         <label for="fName">First Name</label>
@@ -37,6 +39,8 @@
     <div class ="form-group">
         <input class="btn btn-success" type="submit" value="Add Client">
     </div>
+    </div>
+</div>
 </form>
 </body>
 </html>
