--- a/src/main/resources/templates/appointments/clients.html
+++ b/src/main/resources/templates/appointments/clients.html
@@ -6,7 +6,12 @@
 <h1>Clients</h1>
 <nav th:replace = "fragments :: navigation"></nav>
 
-<table class ="table table-striped">
+<div class="row">
+    <div th:replace="fragments :: leftBanner"></div>
+
+    <div class="col">
+
+<table class ="table table-dark">
     <thead>
     <tr>
         <th>ID</th>
@@ -32,7 +37,11 @@
     <li class="list-group-item"><a href="/clients/add-client">Add Client</a></li>
     <li class="list-group-item"><a href="/clients/delete-client">Delete Client</a></li>
 </ul>
+    </div>
 
+    <div th:replace="fragments :: rightBanner"></div>
+
+</div>
 
 </body>
 </html>
