--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -36,6 +36,9 @@
         <ul class="navbar-nav">
             <li class="nav-item"><a class="nav-link active" href="/appointments">Appointments</a></li>
         </ul>
+        <ul class="navbar-nav">
+            <li class="nav-item"><a class="nav-link active" href="/logout">LogOut</a></li>
+        </ul>
     </div>
 </nav>
 
